Port changes to get the labels right-aligned and spaced correctly from version 1

--- a/contrib/ipython-testing/static/sagecell.css
+++ b/contrib/ipython-testing/static/sagecell.css
@@ -130,6 +130,20 @@
     border-color: gray;
 }
 
+/** Ported from changes to version 1: may not be needed?
+.sagecell_interactControls {
+    width: auto;
+}
+
+.sagecell_interactControls .sagecell_labelcell {
+    text-align: right !important;
+    padding-right: 0.5ex !important;
+    padding-top: 0.6ex !important;
+    padding-bottom: 0.6ex !important;
+
+}
+** end of changes to version 1 */
+
 .sagecell_interactControls > tr > td:first-child {
     border-left: 2px solid transparent;
 }
